--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,34 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+
+    <div> 
+        <header> 
+            <h1> </h1> 
+        </header>
+    </div>
+
+    
+    <div> 
+        <ul>
+            <li id='li1'> </li>
+            <li id='li2'>  </li>
+            <li id='li3'> </li>
+        </ul>
+       
+    </div>
+    <div> </div>
+    <div>
+        <footer> </footer>
+    </div>
+</body>
+</html>
