--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,32 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="index.css">
+
+    <style> * {  
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class='box'></div>
+    </header>
+    <div class='main'> 
+        <p>Consider hiding the status bar–and all other app UI–while people are actively viewing full-screen media. If you hide the status bar, be sure to let people retrieve it (and the appropriate app UI) with a single tap. Unless you have a compelling reason to do so, avoid defining a custom gesture to redisplay the status bar because users are unlikely to discover such a gesture or to remember it.</p>
+    </div>
+
+    <ul>
+        <li id='BL'></li>
+        <li id='GR'></li>
+        <li id='GR2'></li>
+        <li id='YL'></li>
+    </ul>
+    
+</body>
+</html>
